# fastapi_base_service

./: .flake8  .gitignore  .isort.cfg  Dockerfile  READMDE.md  README.md  buildspec.yml  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codecheck.yml
app/: main.py
app/aggregations/: .env  main.py  models.py  schema.py  settings.py
app/claims/: crud.py  database.py  main.py  models.py  schemas.py
app/common/: agent.py  base.py  cache.py  cache_keys.py  database.py  enums.py  log.py  logging.conf  protocols.py  settings.py  topics.py
app/common/events/: event_types.py
app/network_events/: .env  main.py
docker/: Dockerfile  docker-compose.yml  meta.properties
terraform/: README.md  alb.tf  certificates.tf  codebuild.tf  codepipeline.tf  dev.tfvars  ecs.tf  efs.tf  lambda.tf  main.tf  prd.tfvars  rds.tf  security_groups.tf  ssm_parameters.tf  stg.tfvars  variables.tf  vpc.tf  waf.tf
terraform/python/: index.py
tests/: test_network_events.py
tests/data/: network_events.json
