[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["Ish Kumar <ish1301@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = "app/serde"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
required-version = '22'
line-length = 120
target-version = ['py39']
include = 'app/.*\.py$|tests/.*\.py$'
